Ajout de l'export des features

--- a/Farizon_David_2_notebook_code_012025.ipynb
+++ b/Farizon_David_2_notebook_code_012025.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import notebook\n",
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +704,7 @@
        "      <th>CREDIT_GOODS_RATIO</th>\n",
        "      <th>CREDIT_TERM</th>\n",
        "      <th>DAYS_BIRTH</th>\n",
-       "      <th>DAYS_ID_PUBLISH</th>\n",
+       "      <th>...</th>\n",
        "      <th>DAYS_REGISTRATION</th>\n",
        "      <th>DEBT_CREDIT_RATIO</th>\n",
        "      <th>EXT_SOURCE_1</th>\n",
@@ -721,7 +730,7 @@
        "      <td>1.158397</td>\n",
        "      <td>16.461104</td>\n",
        "      <td>-9461</td>\n",
-       "      <td>-2120</td>\n",
+       "      <td>...</td>\n",
        "      <td>-3648.0</td>\n",
        "      <td>0.068272</td>\n",
        "      <td>0.083037</td>\n",
@@ -745,7 +754,7 @@
        "      <td>1.145199</td>\n",
        "      <td>36.234085</td>\n",
        "      <td>-16765</td>\n",
-       "      <td>-291</td>\n",
+       "      <td>...</td>\n",
        "      <td>-1186.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.311267</td>\n",
@@ -769,7 +778,7 @@
        "      <td>1.000000</td>\n",
        "      <td>20.000000</td>\n",
        "      <td>-19046</td>\n",
-       "      <td>-2531</td>\n",
+       "      <td>...</td>\n",
        "      <td>-4260.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>NaN</td>\n",
@@ -793,7 +802,7 @@
        "      <td>1.052803</td>\n",
        "      <td>10.532818</td>\n",
        "      <td>-19005</td>\n",
-       "      <td>-2437</td>\n",
+       "      <td>...</td>\n",
        "      <td>-9833.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -817,7 +826,7 @@
        "      <td>1.000000</td>\n",
        "      <td>23.461618</td>\n",
        "      <td>-19932</td>\n",
-       "      <td>-3458</td>\n",
+       "      <td>...</td>\n",
        "      <td>-4311.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>NaN</td>\n",
@@ -831,6 +840,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -848,36 +858,38 @@
        "3           570.143252                0.219900            1.052803   \n",
        "4           400.406758                0.179963            1.000000   \n",
        "\n",
-       "   CREDIT_TERM  DAYS_BIRTH  DAYS_ID_PUBLISH  DAYS_REGISTRATION  \\\n",
-       "0    16.461104       -9461            -2120            -3648.0   \n",
-       "1    36.234085      -16765             -291            -1186.0   \n",
-       "2    20.000000      -19046            -2531            -4260.0   \n",
-       "3    10.532818      -19005            -2437            -9833.0   \n",
-       "4    23.461618      -19932            -3458            -4311.0   \n",
+       "   CREDIT_TERM  DAYS_BIRTH  ...  DAYS_REGISTRATION  DEBT_CREDIT_RATIO  \\\n",
+       "0    16.461104       -9461  ...            -3648.0           0.068272   \n",
+       "1    36.234085      -16765  ...            -1186.0           0.000000   \n",
+       "2    20.000000      -19046  ...            -4260.0           0.000000   \n",
+       "3    10.532818      -19005  ...            -9833.0                NaN   \n",
+       "4    23.461618      -19932  ...            -4311.0           0.000000   \n",
        "\n",
-       "   DEBT_CREDIT_RATIO  EXT_SOURCE_1  EXT_SOURCE_2  EXT_SOURCE_3  \\\n",
-       "0           0.068272      0.083037      0.262949      0.139376   \n",
-       "1           0.000000      0.311267      0.622246           NaN   \n",
-       "2           0.000000           NaN      0.555912      0.729567   \n",
-       "3                NaN           NaN      0.650442           NaN   \n",
-       "4           0.000000           NaN      0.322738           NaN   \n",
+       "   EXT_SOURCE_1  EXT_SOURCE_2  EXT_SOURCE_3  INSTA_AMT_PAYMENT  \\\n",
+       "0      0.083037      0.262949      0.139376       11559.247105   \n",
+       "1      0.311267      0.622246           NaN       64754.586000   \n",
+       "2           NaN      0.555912      0.729567        7096.155000   \n",
+       "3           NaN      0.650442           NaN       62947.088438   \n",
+       "4           NaN      0.322738           NaN       12214.060227   \n",
        "\n",
-       "   INSTA_AMT_PAYMENT  INSTA_NUM_INSTALMENT_VERSION  POS_CNT_INSTALMENT_FUTURE  \\\n",
-       "0       11559.247105                      1.052632                  15.000000   \n",
-       "1       64754.586000                      1.040000                   5.785714   \n",
-       "2        7096.155000                      1.333333                   2.250000   \n",
-       "3       62947.088438                      1.125000                   8.650000   \n",
-       "4       12214.060227                      1.166667                   8.969697   \n",
+       "   INSTA_NUM_INSTALMENT_VERSION  POS_CNT_INSTALMENT_FUTURE  PREV_CNT_PAYMENT  \\\n",
+       "0                      1.052632                  15.000000         24.000000   \n",
+       "1                      1.040000                   5.785714         10.000000   \n",
+       "2                      1.333333                   2.250000          4.000000   \n",
+       "3                      1.125000                   8.650000         23.000000   \n",
+       "4                      1.166667                   8.969697         20.666667   \n",
        "\n",
-       "   PREV_CNT_PAYMENT  PUBLISH_REGISTRATION_RATIO  \n",
-       "0         24.000000                    0.581140  \n",
-       "1         10.000000                    0.245363  \n",
-       "2          4.000000                    0.594131  \n",
-       "3         23.000000                    0.247839  \n",
-       "4         20.666667                    0.802134  "
+       "   PUBLISH_REGISTRATION_RATIO  \n",
+       "0                    0.581140  \n",
+       "1                    0.245363  \n",
+       "2                    0.594131  \n",
+       "3                    0.247839  \n",
+       "4                    0.802134  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1110,7 @@
        "4                    1.065500  "
       ]
      },
-     "execution_count": 238,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2022,7 +2034,7 @@
        "PUBLISH_REGISTRATION_RATIO                      1.000000  "
       ]
      },
-     "execution_count": 243,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2038,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2070,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2198,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2254,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2274,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2305,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2336,6 +2348,46 @@
     "\n",
     "# # Affichage\n",
     "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Export des features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Fichiers exportés avec succès :\n",
+      " - d:\\Pro\\OpenClassrooms\\Projet_7\\3_dossier_code_012025\\features\\app_train_features.csv\n",
+      " - d:\\Pro\\OpenClassrooms\\Projet_7\\3_dossier_code_012025\\features\\app_test_features.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 📌 Définition du chemin du dossier d'export\n",
+    "export_dir = os.path.join(os.getcwd(), \"features\")\n",
+    "\n",
+    "# 📂 Vérification et création du dossier s'il n'existe pas\n",
+    "os.makedirs(export_dir, exist_ok=True)\n",
+    "\n",
+    "# 📌 Export des datasets\n",
+    "app_train_path = os.path.join(export_dir, \"app_train_features.csv\")\n",
+    "app_test_path = os.path.join(export_dir, \"app_test_features.csv\")\n",
+    "\n",
+    "app_train.to_csv(app_train_path, index=False, encoding='utf-8')\n",
+    "app_test.to_csv(app_test_path, index=False, encoding='utf-8')\n",
+    "\n",
+    "# ✅ Confirmation\n",
+    "print(f\"✅ Fichiers exportés avec succès :\\n - {app_train_path}\\n - {app_test_path}\")"
    ]
   },
   {
@@ -2674,7 +2726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Version en dévelopement\n",
+    "\n",
     "def train_and_evaluate(X, y, algorithm, hyperparams, searchMode='grid', numFolds=7,\n",
     "                       mlflow_logging=True, balance_strategy=None, refitMetric=\"business_metric\"):\n",
     "    \"\"\"\n",
