Organisation des dossiers pour l'implémentation streamlit

--- a/Farizon_David_2_notebook_code_012025.ipynb
+++ b/Farizon_David_2_notebook_code_012025.ipynb
@@ -238,13 +238,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exploration préliminaire"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -1130,7 +1123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyse & Data Viz"
+    "# Analyses"
    ]
   },
   {
@@ -1142,6 +1135,13 @@
     "# Réglages globaux pour les graphiques\n",
     "sns.set(style=\"whitegrid\")\n",
     "plt.rcParams.update({'figure.figsize': (18, 36), 'axes.titlesize': 14, 'axes.labelsize': 12, 'xtick.labelsize': 10, 'ytick.labelsize': 10})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distributions"
    ]
   },
   {
@@ -1256,6 +1256,13 @@
     "\n",
     "plt.tight_layout(h_pad=2.0)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Corrélations"
    ]
   },
   {
@@ -2183,6 +2190,13 @@
    ],
    "source": [
     "app_train.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ACP"
    ]
   },
   {
