Connection à l'API depuis streamlit et affichage des prédictions sur un client selectionné aléatoirement

--- a/api/Farizon_David_5_notebook_test_API_0125.ipynb
+++ b/api/Farizon_David_5_notebook_test_API_0125.ipynb
@@ -456,6 +456,10 @@
     "cd api\n",
     "python app.py\n",
     "\n",
+    "# Lancer Streamlit\n",
+    "cd streamlit_app\n",
+    "streamlit run streamlit_app.py\n",
+    "\n",
     "# Accéder au serveur MLflow (dans le navigateur) :\n",
     "http://127.0.0.1:5000\n",
     "\n",
