Ajout du rapport evidently et du script pour le générer

--- a/api/Farizon_David_5_notebook_test_API_0125.ipynb
+++ b/api/Farizon_David_5_notebook_test_API_0125.ipynb
@@ -460,6 +460,10 @@
     "cd streamlit_app\n",
     "streamlit run streamlit_app.py\n",
     "\n",
+    "# Générer le rapport evidently\n",
+    "cd evidently\n",
+    "python generate-evidently-report.py\n",
+    "\n",
     "# Accéder au serveur MLflow (dans le navigateur) :\n",
     "http://127.0.0.1:5000\n",
     "\n",
