Mise à jour des noms de colones du rapport evidently

--- a/api/Farizon_David_5_notebook_test_API_0125.ipynb
+++ b/api/Farizon_David_5_notebook_test_API_0125.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
      "text": [
       "Version de Python : 3.12.8 (tags/v3.12.8:2dc476b, Dec  3 2024, 19:30:04) [MSC v.1942 64 bit (AMD64)]\n",
       "Version de Jupyter Notebook : 7.3.2\n",
-      "Version de NumPy : 2.1.3\n",
+      "Version de NumPy : 2.0.2\n",
       "Version de Pandas : 2.2.3\n",
       "Version de MLFlow : 2.19.0\n"
      ]
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
       "\n",
       "✅ Modèle chargé avec succès : <class 'lightgbm.sklearn.LGBMClassifier'>\n",
       "🔍 Le modèle supporte bien `predict_proba`.\n",
-      "✅ Prédiction test réussi : [[0.64525826 0.35474174]]\n",
+      "✅ Prédiction test réussi : [[0.97559615 0.02440385]]\n",
       "\n",
       "📌 Seuil optimal stocké : 0.150\n"
      ]
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -242,87 +242,87 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>AMT_ANNUITY</td>\n",
-       "      <td>0.536852</td>\n",
+       "      <td>0.053190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AMT_CREDIT</td>\n",
-       "      <td>0.015067</td>\n",
+       "      <td>0.250653</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AMT_GOODS_PRICE</td>\n",
-       "      <td>0.826597</td>\n",
+       "      <td>0.308885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>ANNUITY_INCOME_PERCENT</td>\n",
-       "      <td>0.220804</td>\n",
+       "      <td>0.998638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>CREDIT_GOODS_RATIO</td>\n",
-       "      <td>0.932869</td>\n",
+       "      <td>0.478476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>CREDIT_TERM</td>\n",
-       "      <td>0.605552</td>\n",
+       "      <td>0.553094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>DAYS_BIRTH</td>\n",
-       "      <td>0.977147</td>\n",
+       "      <td>0.862391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>DAYS_ID_PUBLISH</td>\n",
-       "      <td>0.739047</td>\n",
+       "      <td>0.409848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>DAYS_REGISTRATION</td>\n",
-       "      <td>0.113162</td>\n",
+       "      <td>0.822506</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>DEBT_CREDIT_RATIO</td>\n",
-       "      <td>0.247072</td>\n",
+       "      <td>0.212148</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>EXT_SOURCE_1</td>\n",
-       "      <td>0.599941</td>\n",
+       "      <td>0.964284</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>EXT_SOURCE_2</td>\n",
-       "      <td>0.802177</td>\n",
+       "      <td>0.132402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>EXT_SOURCE_3</td>\n",
-       "      <td>0.310304</td>\n",
+       "      <td>0.977924</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>INSTA_AMT_PAYMENT</td>\n",
-       "      <td>0.116003</td>\n",
+       "      <td>0.679775</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>INSTA_NUM_INSTALMENT_VERSION</td>\n",
-       "      <td>0.000963</td>\n",
+       "      <td>0.268626</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>POS_CNT_INSTALMENT_FUTURE</td>\n",
-       "      <td>0.040231</td>\n",
+       "      <td>0.391518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>PREV_CNT_PAYMENT</td>\n",
-       "      <td>0.671020</td>\n",
+       "      <td>0.249639</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -330,23 +330,23 @@
       ],
       "text/plain": [
        "                         Feature    Valeur\n",
-       "0                    AMT_ANNUITY  0.536852\n",
-       "1                     AMT_CREDIT  0.015067\n",
-       "2                AMT_GOODS_PRICE  0.826597\n",
-       "3         ANNUITY_INCOME_PERCENT  0.220804\n",
-       "4             CREDIT_GOODS_RATIO  0.932869\n",
-       "5                    CREDIT_TERM  0.605552\n",
-       "6                     DAYS_BIRTH  0.977147\n",
-       "7                DAYS_ID_PUBLISH  0.739047\n",
-       "8              DAYS_REGISTRATION  0.113162\n",
-       "9              DEBT_CREDIT_RATIO  0.247072\n",
-       "10                  EXT_SOURCE_1  0.599941\n",
-       "11                  EXT_SOURCE_2  0.802177\n",
-       "12                  EXT_SOURCE_3  0.310304\n",
-       "13             INSTA_AMT_PAYMENT  0.116003\n",
-       "14  INSTA_NUM_INSTALMENT_VERSION  0.000963\n",
-       "15     POS_CNT_INSTALMENT_FUTURE  0.040231\n",
-       "16              PREV_CNT_PAYMENT  0.671020"
+       "0                    AMT_ANNUITY  0.053190\n",
+       "1                     AMT_CREDIT  0.250653\n",
+       "2                AMT_GOODS_PRICE  0.308885\n",
+       "3         ANNUITY_INCOME_PERCENT  0.998638\n",
+       "4             CREDIT_GOODS_RATIO  0.478476\n",
+       "5                    CREDIT_TERM  0.553094\n",
+       "6                     DAYS_BIRTH  0.862391\n",
+       "7                DAYS_ID_PUBLISH  0.409848\n",
+       "8              DAYS_REGISTRATION  0.822506\n",
+       "9              DEBT_CREDIT_RATIO  0.212148\n",
+       "10                  EXT_SOURCE_1  0.964284\n",
+       "11                  EXT_SOURCE_2  0.132402\n",
+       "12                  EXT_SOURCE_3  0.977924\n",
+       "13             INSTA_AMT_PAYMENT  0.679775\n",
+       "14  INSTA_NUM_INSTALMENT_VERSION  0.268626\n",
+       "15     POS_CNT_INSTALMENT_FUTURE  0.391518\n",
+       "16              PREV_CNT_PAYMENT  0.249639"
       ]
      },
      "metadata": {},
@@ -356,14 +356,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "✅ Résultat de l'API :\n",
-      "🔹 Probabilité d'appartenir à la classe 0 (fiable) : 0.914\n",
-      "🔹 Probabilité d'appartenir à la classe 1 (risqué) : 0.086\n",
-      "🔹 Seuil optimal : 0.150\n",
-      "🔹 Marge appliquée : 0.000%\n",
-      "🔹 Limites de la zone grise : [0.150, 0.150]\n",
-      "🔹 Résultat final : Classe_0 (fiable)\n"
+      "❌ Erreur lors de l'appel API : 404, <!doctype html>\n",
+      "<html lang=en>\n",
+      "<title>404 Not Found</title>\n",
+      "<h1>Not Found</h1>\n",
+      "<p>The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.</p>\n",
+      "\n"
      ]
     }
    ],
@@ -413,7 +411,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 Code HTTP : 404\n",
+      "📝 Réponse : <!doctype html>\n",
+      "<html lang=en>\n",
+      "<title>404 Not Found</title>\n",
+      "<h1>Not Found</h1>\n",
+      "<p>The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.</p>\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLe noyau s’est bloqué lors de l’exécution du code dans une cellule active ou une cellule précédente. \n",
+      "\u001b[1;31mVeuillez vérifier le code dans la ou les cellules pour identifier une cause possible de l’échec. \n",
+      "\u001b[1;31mCliquez <a href='https://aka.ms/vscodeJupyterKernelCrash'>ici</a> pour plus d’informations. \n",
+      "\u001b[1;31mPour plus d’informations, consultez Jupyter <a href='command:jupyter.viewOutput'>log</a>."
+     ]
+    }
+   ],
+   "source": [
+    "# api_url = \"http://127.0.0.1:5000/predict\"\n",
+    "# response = requests.post(api_url, json={})\n",
+    "\n",
+    "# print(f\"🔍 Code HTTP : {response.status_code}\")\n",
+    "# print(f\"📝 Réponse : {response.text}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,6 +489,7 @@
     "mlflow ui --backend-store-uri file:D:/Pro/OpenClassrooms/Projet_7/mlruns/\n",
     "\n",
     "# Lancer l'API Flask\n",
+    "taskkill /F /IM python.exe\n",
     "cd api\n",
     "python app.py\n",
     "\n",
