Suppression de la génération du fichier requirements du notebook modélisation et test unitaire blanc

--- a/Farizon_David_2_notebook_modelisation_012025.ipynb
+++ b/Farizon_David_2_notebook_modelisation_012025.ipynb
@@ -5590,15 +5590,20 @@
      ]
     }
    ],
-   "source": [
-    "rdgjdj+5"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Dévelopement technique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MLFlow - Vérifications"
    ]
   },
   {
@@ -5646,64 +5651,6 @@
    ],
    "source": [
     "mlflow.list_experiments()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Génération du fichier requirement"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fichier raw_requirements.txt généré à D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/raw_requirements.txt\n",
-      "Fichier requirements.txt nettoyé généré à D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Chemin vers les requirements\n",
-    "raw_requirements_file = \"D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/raw_requirements.txt\"\n",
-    "cleaned_requirements_file = \"D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\"\n",
-    "\n",
-    "# Chemin absolu de pip\n",
-    "pip_path = \"D://Pro//OpenClassrooms//Projet_7//.venv//Scripts//pip.exe\"\n",
-    "\n",
-    "# Repo\n",
-    "os.makedirs(os.path.dirname(raw_requirements_file), exist_ok=True)\n",
-    "\n",
-    "# Générer le fichier raw_requirements.txt\n",
-    "try:\n",
-    "    with open(raw_requirements_file, \"w\") as f:\n",
-    "        result = subprocess.run([pip_path, \"freeze\"], stdout=f, text=True, check=True)\n",
-    "    print(f\"Fichier raw_requirements.txt généré à {raw_requirements_file}\")\n",
-    "except subprocess.CalledProcessError as e:\n",
-    "    print(f\"Erreur lors de l'exécution de pip freeze : {e}\")\n",
-    "    exit(1)\n",
-    "except Exception as e:\n",
-    "    print(f\"Une erreur inattendue s'est produite : {e}\")\n",
-    "    exit(1)\n",
-    "\n",
-    "# Nettoyage du fichier requirements\n",
-    "try:\n",
-    "    with open(raw_requirements_file, \"r\") as raw_f, open(cleaned_requirements_file, \"w\") as cleaned_f:\n",
-    "        for line in raw_f:\n",
-    "            # Nettoyage des lignes\n",
-    "            if \"@ file://\" in line:\n",
-    "                line = re.sub(r\"@ file://.*\", \"\", line)\n",
-    "            cleaned_f.write(line)\n",
-    "    print(f\"Fichier requirements.txt nettoyé généré à {cleaned_requirements_file}\")\n",
-    "except Exception as e:\n",
-    "    print(f\"Une erreur inattendue s'est produite lors du nettoyage : {e}\")\n",
-    "    exit(1)"
    ]
   },
   {
