Ajout du web app service plan et du RESSOURCE_GROUP

--- a/Farizon_David_2_notebook_modelisation_012025.ipynb
+++ b/Farizon_David_2_notebook_modelisation_012025.ipynb
@@ -5670,6 +5670,7 @@
    "source": [
     "# Activer l'environement (avec .venv):\n",
     "cd 3_dossier_code_012025\n",
+    "cd D:\\Pro\\OpenClassrooms\\Projet_7\\3_dossier_code_012025\n",
     "Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass\n",
     "D:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Scripts\\Activate.ps1\n",
     "\n",
