Adaptations avant déploiement

--- a/Farizon_David_2_notebook_modelisation_012025.ipynb
+++ b/Farizon_David_2_notebook_modelisation_012025.ipynb
@@ -5696,7 +5696,10 @@
     "# Sur branche de dévloppement\n",
     "git push origin ajout-tests-ci\n",
     "# Sur branche principale\n",
-    "git push origin main"
+    "git push origin main\n",
+    "\n",
+    "# Vérifier si le déploiement a été lancé sur Azure\n",
+    "az webapp deployment list --name $Env:AZURE_WEBAPP_NAME --resource-group $Env:RESOURCE_GROUP --output table"
    ]
   },
   {
