--- a/api/Farizon_David_5_notebook_test_API_0125.ipynb
+++ b/api/Farizon_David_5_notebook_test_API_0125.ipynb
@@ -606,7 +606,10 @@
     "# Sur branche de dévloppement\n",
     "git push origin ajout-tests-ci\n",
     "# Sur branche principale\n",
-    "git push origin main"
+    "git push origin main\n",
+    "\n",
+    "# Logs Azure\n",
+    "az webapp log tail --name prediction-api --resource-group cloud-shell-storage-westeurope"
    ]
   }
  ],
