--- a/api/Farizon_David_5_notebook_test_API_0125.ipynb
+++ b/api/Farizon_David_5_notebook_test_API_0125.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
     "\n",
     "    print(\"✅ Fichier Pickle chargé avec succès !\")\n",
     "\n",
-    "    # 🔍 Afficher les clés du dictionnaire stocké\n",
+    "    # 🔍 Clés du dictionnaire stocké\n",
     "    print(\"\\n📂 Contenu du fichier Pickle :\")\n",
     "    for key in model_data.keys():\n",
     "        print(f\"🔹 {key} -> Type: {type(model_data[key])}\")\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -360,10 +360,10 @@
     "if \"features\" in model_data:\n",
     "    features_list = model_data[\"features\"]\n",
     "\n",
-    "    # 📌 Générer un DataFrame avec les bonnes colonnes\n",
+    "    # 📌 DataFrame avec les bonnes colonnes\n",
     "    app_test_features = pd.DataFrame(columns=features_list)\n",
     "\n",
-    "    # 📌 Ajouter une ligne aléatoire avec des valeurs simulées\n",
+    "    # 📌 Ligne aléatoire avec des valeurs simulées\n",
     "    app_test_features.loc[0] = np.random.rand(len(features_list))\n",
     "\n",
     "    # 📌 Sélection d'une ligne aléatoire sous forme de dictionnaire\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -661,10 +661,10 @@
     "if \"features\" in model_data:\n",
     "    features_list = model_data[\"features\"]\n",
     "\n",
-    "    # 📌 Générer un DataFrame avec les bonnes colonnes\n",
+    "    # 📌 DataFrame avec les bonnes colonnes\n",
     "    app_test_features = pd.DataFrame(columns=features_list)\n",
     "\n",
-    "    # 📌 Ajouter une ligne aléatoire avec des valeurs simulées\n",
+    "    # 📌 Ligne aléatoire avec des valeurs simulées\n",
     "    app_test_features.loc[0] = np.random.rand(len(features_list))\n",
     "\n",
     "    # 📌 Sélection d'une ligne aléatoire sous forme de dictionnaire\n",
@@ -775,88 +775,6 @@
     "\n",
     "except requests.exceptions.RequestException as e:\n",
     "    print(f\"❌ Erreur de connexion à l'API : {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# api_url = \"http://127.0.0.1:5000/predict\"\n",
-    "# response = requests.post(api_url, json={})\n",
-    "\n",
-    "# print(f\"🔍 Code HTTP : {response.status_code}\")\n",
-    "# print(f\"📝 Réponse : {response.text}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(\"📌 Features du modèle :\", features_list)\n",
-    "# print(type(features_list))\n",
-    "# print(\"📌 Données envoyées à l'API :\", random_sample)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Commandes"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "# Activer l'environement (avec .venv):\n",
-    "cd 3_dossier_code_012025\n",
-    "Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass\n",
-    "D:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Scripts\\Activate.ps1\n",
-    "\n",
-    "# Installer package\n",
-    "pip install [...]\n",
-    "\n",
-    "# Activer l'environement (avec Anaconda):\n",
-    "conda activate D:/Pro/Env\n",
-    "\n",
-    "# Lancer l'UI MLflow :\n",
-    "mlflow ui --backend-store-uri sqlite:///mlruns.db\n",
-    "mlflow ui --backend-store-uri file:D:/Pro/OpenClassrooms/Projet_7/mlruns/\n",
-    "\n",
-    "# Lancer l'API Flask\n",
-    "taskkill /F /IM python.exe\n",
-    "cd api\n",
-    "python app.py\n",
-    "\n",
-    "# Lancer Streamlit\n",
-    "cd streamlit_app\n",
-    "streamlit run streamlit_app.py\n",
-    "\n",
-    "# Générer le rapport evidently\n",
-    "cd evidently\n",
-    "python generate-evidently-report.py\n",
-    "\n",
-    "# Accéder au serveur MLflow (dans le navigateur) :\n",
-    "http://127.0.0.1:5000\n",
-    "\n",
-    "# Test unitaire avec PyTest\n",
-    "pytest tests/\n",
-    "\n",
-    "# Pousser les modifications sur Git\n",
-    "git add .\n",
-    "git commit -m \"Modifications...\"\n",
-    "# Sur branche de dévloppement\n",
-    "git push origin ajout-tests-ci\n",
-    "# Sur branche principale\n",
-    "git push origin main"
    ]
   }
  ],
